# nlp_tokenformer

./: .gitignore  README.md  dataloader.py  environment_entropy.yml  evaluate.py  job.sh  job_eval.sh  job_no_tokenformer.sh  job_tokenformer.sh  pyproject.toml  run_tokenformer_moe_s_nastya.sh  run_tokenformer_s_nastya.sh  run_transfomer_moe_s_nastya.sh  run_transfomer_s_nastya.sh  train.py  train_working_version.py
Report_NLP/: jmlr2e.sty  main.tex  references.bib
config/: mixtral_base.json  mixtral_tokenformer.json  tkf_l.json  tkf_m.json  tkf_s.json  tkfmoe_l.json  tkfmoe_m.json  tkfmoe_s.json  trf_l.json  trf_m.json  trf_s.json  trfmoe_l.json  trfmoe_m.json  trfmoe_s.json
src/mistral_inference/: args.py  transformer.py  transformer_layers.py
src/mixtral_tokenformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tokenformer/: pattention.py  tokenformer.py
