[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mixtral-tokenformer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "xformers>=0.0.24",
    "simple-parsing>=0.1.5",
    "safetensors>=0.4.0",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]